Fixed ProductCard view on tablet (April 22) #10

--- a/src/Components/ProductCard/ProductCard.css
+++ b/src/Components/ProductCard/ProductCard.css
@@ -95,7 +95,7 @@
         height: 73px;
         width: 100%;
         font-size: 15px;
-        padding: 14px 0px 10px;
+        padding: 12px 0px 10px;
     }
 
     .productcard__image {
